@@ -1,7 +1,7 @@
 package com.openclassrooms.tourguide.persistences.user;
 
+import gpsUtil.location.Attraction;
 import gpsUtil.location.VisitedLocation;
-import lombok.Getter;
 import tripPricer.Provider;
 
 import java.util.ArrayList;
@@ -9,9 +9,12 @@ import java.util.Date;
 import java.util.List;
 import java.util.UUID;
 import java.util.concurrent.CopyOnWriteArrayList;
+import java.util.concurrent.locks.ReentrantLock;
 
-@Getter
+
 public class User {
+    private final ReentrantLock rewardsLock = new ReentrantLock();
+    private final ReentrantLock visitedLocationsLock = new ReentrantLock();
     private final UUID userId;
     private final String userName;
     private String phoneNumber;
@@ -29,9 +32,26 @@ public class User {
         this.emailAddress = emailAddress;
     }
 
+    public UUID getUserId() {
+        return userId;
+    }
+
+    public String getUserName() {
+        return userName;
+    }
+
+    public String getPhoneNumber() {
+        return phoneNumber;
+    }
+
     public void setPhoneNumber(String phoneNumber) {
         this.phoneNumber = phoneNumber;
     }
+
+    public String getEmailAddress() {
+        return emailAddress;
+    }
+
 
     public void setEmailAddress(String emailAddress) {
         this.emailAddress = emailAddress;
@@ -41,30 +61,78 @@ public class User {
         this.latestLocationTimestamp = latestLocationTimestamp;
     }
 
-    public void addToVisitedLocations(VisitedLocation visitedLocation) {
-        visitedLocations.add(visitedLocation);
+    public Date getLatestLocationTimestamp() {
+        return latestLocationTimestamp;
     }
 
+
+    public void addToVisitedLocations(VisitedLocation visitedLocation) {
+        visitedLocationsLock.lock();
+        try {
+            visitedLocations.add(visitedLocation);
+        } finally {
+            visitedLocationsLock.unlock();
+        }
+    }
+
+    public List<VisitedLocation> getVisitedLocations() {
+        return List.copyOf(visitedLocations);
+    }
+
+
     public void clearVisitedLocations() {
-        visitedLocations.clear();
+        visitedLocationsLock.lock();
+        try {
+            visitedLocations.clear();
+        } finally {
+            visitedLocationsLock.unlock();
+        }
+
     }
 
     public void addUserReward(UserReward userReward) {
-        if (userRewards.stream().filter(r -> !r.attraction.attractionName.equals(userReward.attraction)).count() == 0) {
-            userRewards.add(userReward);
+        rewardsLock.lock();
+        try {
+            if (!hasRewardForAttraction(userReward.attraction())) {
+                userRewards.add(userReward);
+            }
+        } finally {
+            rewardsLock.unlock();
         }
     }
+
+    public List<UserReward> getUserRewards() {
+        return List.copyOf(userRewards);
+    }
+
+    public UserPreferences getUserPreferences() {
+        return userPreferences;
+    }
+
 
     public void setUserPreferences(UserPreferences userPreferences) {
         this.userPreferences = userPreferences;
     }
 
     public VisitedLocation getLastVisitedLocation() {
-        return visitedLocations.get(visitedLocations.size() - 1);
+        visitedLocationsLock.lock();
+        try {
+            return visitedLocations.getLast();
+        } finally {
+            visitedLocationsLock.unlock();
+        }
     }
 
     public void setTripDeals(List<Provider> tripDeals) {
         this.tripDeals = tripDeals;
     }
 
+    public boolean hasRewardForAttraction(final Attraction attraction) {
+        rewardsLock.lock();
+        try {
+            return userRewards.stream().anyMatch(r -> r.attraction().attractionName.equals(attraction.attractionName));
+        } finally {
+            rewardsLock.unlock();
+        }
+    }
 }
