@@ -4,8 +4,10 @@ import com.openclassrooms.tourguide.config.RewardProperties;
 import com.openclassrooms.tourguide.dto.NearbyAttractionDto;
 import com.openclassrooms.tourguide.helper.InternalTestHelper;
 import com.openclassrooms.tourguide.persistences.user.User;
+import com.openclassrooms.tourguide.service.GpsService;
 import com.openclassrooms.tourguide.service.RewardsService;
 import com.openclassrooms.tourguide.service.TourGuideService;
+import com.openclassrooms.tourguide.service.TripPricerService;
 import com.openclassrooms.tourguide.tracker.Tracker;
 import com.openclassrooms.tourguide.utils.LocationUtil;
 import gpsUtil.GpsUtil;
@@ -15,28 +17,37 @@ import gpsUtil.location.VisitedLocation;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.boot.test.context.SpringBootTest;
 import rewardCentral.RewardCentral;
 import tripPricer.Provider;
+import tripPricer.TripPricer;
 
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
 import java.util.UUID;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.SoftAssertions.assertSoftly;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.mock;
 
+@SpringBootTest
 public class TestTourGuideService {
+
+    @Value("${trip.pricer.api.key}")
+    private String apiKey;
 
     @Test
     public void getUserLocation() {
         GpsUtil gpsUtil = new GpsUtil();
-        RewardsService rewardsService = new RewardsService(gpsUtil, new RewardCentral(), new RewardProperties());
+        GpsService gpsService = new GpsService(gpsUtil);
+        TripPricerService tripPricerService = new TripPricerService(new TripPricer(), apiKey);
+        RewardsService rewardsService = new RewardsService(gpsService, new RewardCentral(), new RewardProperties());
         InternalTestHelper.setInternalUserNumber(0);
-        TourGuideService tourGuideService = new TourGuideService(gpsUtil, rewardsService);
+        TourGuideService tourGuideService = new TourGuideService(gpsService, rewardsService, tripPricerService);
         Tracker tracker = new Tracker(tourGuideService);
 
         User user = new User(UUID.randomUUID(), "jon", "000", "jon@tourGuide.com");
@@ -44,15 +55,17 @@ public class TestTourGuideService {
 
         tracker.stopTracking();
 
-        assertEquals(visitedLocation.userId, user.getUserId());
+        assertThat(visitedLocation.userId).isEqualTo(user.getUserId());
     }
 
     @Test
     public void addUser() {
         GpsUtil gpsUtil = new GpsUtil();
-        RewardsService rewardsService = new RewardsService(gpsUtil, new RewardCentral(), new RewardProperties());
+        GpsService gpsService = new GpsService(gpsUtil);
+        TripPricerService tripPricerService = new TripPricerService(new TripPricer(), apiKey);
+        RewardsService rewardsService = new RewardsService(gpsService, new RewardCentral(), new RewardProperties());
         InternalTestHelper.setInternalUserNumber(0);
-        TourGuideService tourGuideService = new TourGuideService(gpsUtil, rewardsService);
+        TourGuideService tourGuideService = new TourGuideService(gpsService, rewardsService, tripPricerService);
         Tracker tracker = new Tracker(tourGuideService);
         User user = new User(UUID.randomUUID(), "jon", "000", "jon@tourGuide.com");
         User user2 = new User(UUID.randomUUID(), "jon2", "000", "jon2@tourGuide.com");
@@ -65,16 +78,20 @@ public class TestTourGuideService {
 
         tracker.stopTracking();
 
-        assertEquals(user, retrievedUser);
-        assertEquals(user2, retrievedUser2);
+        assertSoftly(softly -> {
+            softly.assertThat(retrievedUser).isEqualTo(user);
+            softly.assertThat(retrievedUser2).isEqualTo(user2);
+        });
     }
 
     @Test
     public void getAllUsers() {
         GpsUtil gpsUtil = new GpsUtil();
-        RewardsService rewardsService = new RewardsService(gpsUtil, new RewardCentral(), new RewardProperties());
+        GpsService gpsService = new GpsService(gpsUtil);
+        TripPricerService tripPricerService = new TripPricerService(new TripPricer(), apiKey);
+        RewardsService rewardsService = new RewardsService(gpsService, new RewardCentral(), new RewardProperties());
         InternalTestHelper.setInternalUserNumber(0);
-        TourGuideService tourGuideService = new TourGuideService(gpsUtil, rewardsService);
+        TourGuideService tourGuideService = new TourGuideService(gpsService, rewardsService, tripPricerService);
         Tracker tracker = new Tracker(tourGuideService);
         User user = new User(UUID.randomUUID(), "jon", "000", "jon@tourGuide.com");
         User user2 = new User(UUID.randomUUID(), "jon2", "000", "jon2@tourGuide.com");
@@ -86,31 +103,34 @@ public class TestTourGuideService {
 
         tracker.stopTracking();
 
-        assertTrue(allUsers.contains(user));
-        assertTrue(allUsers.contains(user2));
+        assertThat(allUsers).contains(user, user2);
     }
 
     @Test
     public void trackUser() {
         GpsUtil gpsUtil = new GpsUtil();
-        RewardsService rewardsService = new RewardsService(gpsUtil, new RewardCentral(), new RewardProperties());
+        GpsService gpsService = new GpsService(gpsUtil);
+        TripPricerService tripPricerService = new TripPricerService(new TripPricer(), apiKey);
+        RewardsService rewardsService = new RewardsService(gpsService, new RewardCentral(), new RewardProperties());
         InternalTestHelper.setInternalUserNumber(0);
-        TourGuideService tourGuideService = new TourGuideService(gpsUtil, rewardsService);
+        TourGuideService tourGuideService = new TourGuideService(gpsService, rewardsService, tripPricerService);
         Tracker tracker = new Tracker(tourGuideService);
         User user = new User(UUID.randomUUID(), "jon", "000", "jon@tourGuide.com");
         VisitedLocation visitedLocation = tourGuideService.trackUserLocation(user);
 
         tracker.stopTracking();
 
-        assertEquals(user.getUserId(), visitedLocation.userId);
+        assertThat(visitedLocation.userId).isEqualTo(user.getUserId());
     }
 
     @Test
     public void getNearbyAttractions() {
         GpsUtil gpsUtil = new GpsUtil();
-        RewardsService rewardsService = new RewardsService(gpsUtil, new RewardCentral(), new RewardProperties());
+        GpsService gpsService = new GpsService(gpsUtil);
+        TripPricerService tripPricerService = new TripPricerService(new TripPricer(), apiKey);
+        RewardsService rewardsService = new RewardsService(gpsService, new RewardCentral(), new RewardProperties());
         InternalTestHelper.setInternalUserNumber(0);
-        TourGuideService tourGuideService = new TourGuideService(gpsUtil, rewardsService);
+        TourGuideService tourGuideService = new TourGuideService(gpsService, rewardsService, tripPricerService);
         Tracker tracker = new Tracker(tourGuideService);
         User user = new User(UUID.randomUUID(), "jon", "000", "jon@tourGuide.com");
 
@@ -118,15 +138,17 @@ public class TestTourGuideService {
 
         tracker.stopTracking();
 
-        assertEquals(5, attractions.size());
+        assertThat(attractions).hasSize(5);
     }
 
     @Test
     public void getTripDeals() {
         GpsUtil gpsUtil = new GpsUtil();
-        RewardsService rewardsService = new RewardsService(gpsUtil, new RewardCentral(), new RewardProperties());
+        GpsService gpsService = new GpsService(gpsUtil);
+        TripPricerService tripPricerService = new TripPricerService(new TripPricer(), apiKey);
+        RewardsService rewardsService = new RewardsService(gpsService, new RewardCentral(), new RewardProperties());
         InternalTestHelper.setInternalUserNumber(0);
-        TourGuideService tourGuideService = new TourGuideService(gpsUtil, rewardsService);
+        TourGuideService tourGuideService = new TourGuideService(gpsService, rewardsService, tripPricerService);
         Tracker tracker = new Tracker(tourGuideService);
         User user = new User(UUID.randomUUID(), "jon", "000", "jon@tourGuide.com");
 
@@ -134,17 +156,18 @@ public class TestTourGuideService {
 
         tracker.stopTracking();
 
-        assertEquals(10, providers.size());
+        assertThat(providers).hasSize(10);
     }
 
     @Test
     @DisplayName("should get the 5 nearest attractions to the user")
     void getNearbyAttractionsTest() {
         //given
-        final GpsUtil gpsUtilMock = mock(GpsUtil.class);
+        final TripPricerService tripPricerServiceMock = mock(TripPricerService.class);
+        final GpsService gpsServiceMock = mock(GpsService.class);
         final RewardsService rewardsServiceMock = mock(RewardsService.class);
         InternalTestHelper.setInternalUserNumber(0);
-        final TourGuideService tourGuideService = Mockito.spy(new TourGuideService(gpsUtilMock, rewardsServiceMock));
+        final TourGuideService tourGuideService = Mockito.spy(new TourGuideService(gpsServiceMock, rewardsServiceMock, tripPricerServiceMock));
         final User user = new User(UUID.randomUUID(), "jon", "000", "jon@tourGuide.com");
         final Date date = new Date();
         date.setTime(date.getTime());
@@ -161,17 +184,22 @@ public class TestTourGuideService {
 
         final List<Attraction> attractions = getAttractionList();
 
-        given(gpsUtilMock.getAttractions()).willReturn(attractions);
+        given(gpsServiceMock.getAttractions()).willReturn(attractions);
         given(tourGuideService.getUserLocation(user)).willReturn(visitedLocation);
         given(rewardsServiceMock.getRewardPoints(any(), any())).willReturn(100);
         //when
         List<NearbyAttractionDto> expected = tourGuideService.getFiveClosestAttractions(user);
 
         //then
-        assertEquals(5, expected.size());
-        assertEquals("Boston Common", expected.get(0).getAttractionName());
-        assertEquals(100, expected.get(0).getRewardPoints());
-        assertEquals(distanceToBostonCommon, expected.get(0).getDistanceInMiles());
+        assertThat(expected).hasSize(5);
+        assertThat(expected.getFirst().getAttractionName())
+                .isEqualTo("Boston Common");
+
+        assertThat(expected.getFirst().getRewardPoints())
+                .isEqualTo(100);
+
+        assertThat(expected.getFirst().getDistanceInMiles())
+                .isEqualTo(distanceToBostonCommon);
     }
 
     private static List<Attraction> getAttractionList() {
